[package]
name = "fastcan"
version = "0.1.4"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>", "Fabian Bally <fabian.bally@gmail.com>"]
description = "A CAN signal and definition parser"
repository = "https://github.com/jmagnuson/canparse"
documentation = "https://docs.rs/canparse"
readme = "README.md"
keywords = ["can", "socketcan", "dbc", "parser"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "fastcan"
path = "src/lib.rs"

[[bench]]
name = "canlibrary"
harness = false

[features]
default = []

[dependencies]
byteorder = "1.3"
encoding = "0.2"
enum_primitive = "0.1"
regex = "*"
once_cell = "*"

[dev-dependencies]
approx = "0.3"
criterion = "0.3"
lazy_static = "1.3"


[badges]
travis-ci = { repository = "fabianbally/fast-can-rs" }
codecov = { repository = "fabianbally/fast-can-rs", branch = "main", service = "github" }
